[tool.poetry]
name = "collectd-prometheus"
version = "0.1.0"
description = "collectd plugin to read Prometheus metrics endpoints"
authors = ["Ryar Nyah <ryarnyah@gmail.com>"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
